WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297949
Adds missing iPad Mini missing category MGScreenClassPad11
https://bugs.webkit.org/show_bug.cgi?id=297949
Summary
Adds missing iPad Mini missing category MGScreenClassPad11
Karl Dubost
Reported
2025-08-26 21:07:42 PDT
Currently
https://searchfox.org/wubkat/rev/a722bd4d57831d96ac4ce77b1c203734445b77f1/Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm#1504
``` shouldRecommendDesktopClassBrowsing = screenClass != MGScreenClassPad3 && screenClass != MGScreenClassPad4 && desktopClassBrowsingSupported(); ``` MGScreenClassPad11 is missing.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-26 21:18:51 PDT
<
rdar://problem/159249882
>
Karl Dubost
Comment 2
2025-08-26 21:46:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49920
EWS
Comment 3
2025-08-26 22:18:35 PDT
Committed
299186@main
(db1e9af9faa1): <
https://commits.webkit.org/299186@main
> Reviewed commits have been landed. Closing PR #49920 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug