Adds missing iPad Mini missing category MGScreenClassPad11 https://bugs.webkit.org/show_bug.cgi?id=297949 rdar://159249882

Reviewed by Wenson Hsieh.

This was a missing value in the categories of iPads Mini.

* Source/WebCore/PAL/pal/spi/ios/MobileGestaltSPI.h:
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::isDesktopClassBrowsingRecommended const):

Canonical link: https://commits.webkit.org/299186@main